Closed Bug 351586 Opened 18 years ago Closed 18 years ago

[FIX]nsAttributeTextNode should use nsIMutationObserver, not DOM events

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

(Blocks 1 open bug)

Details

(Keywords: perf)

Attachments

(1 file, 1 obsolete file)

Patch coming up.
Attached patch Proposed change (obsolete) — Splinter Review
Attachment #236996 - Flags: superreview?(bugmail)
Attachment #236996 - Flags: review?(bugmail)
Comment on attachment 236996 [details] [diff] [review]
Proposed change

Sweet, r/sr=sicking
Attachment #236996 - Flags: superreview?(bugmail)
Attachment #236996 - Flags: superreview+
Attachment #236996 - Flags: review?(bugmail)
Attachment #236996 - Flags: review+
Attached patch Merged to tipSplinter Review
Attachment #236996 - Attachment is obsolete: true
Fixed.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: