Use nsIMutationObserver, not DOM mutation listeners, for nsAttributeTextNode. Bug 351586, r+sr=sicking